# cassette

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
demo/: Cargo.toml
demo/src/: main.rs
src/: futures.rs  lib.rs  main.rs
static-cassette-demo/: Cargo.toml
static-cassette-demo/src/: main.rs
