[package]
name = "cassette"
version = "0.2.4"
authors = ["James Munns <james@onevariable.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A simple, single-future, non-blocking executor intended for building state machines"
readme = "README.md"
documentation = "https://docs.rs/cassette"
homepage = "https://github.com/jamesmunns/cassette"
repository = "https://github.com/jamesmunns/cassette"
