[package]
name = "static-cassette"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassette = "0.2.2"
static-alloc = "0.2.2"
once_cell = "1.7.2"
